fix: accessibility score for color  contrast was 1.91, updated the main color #F2AA98 to #D05353 for a positive score of 4.16. Updated hover color #92374D to #F2B880

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html {
   letter-spacing: 2px;
   font-size: 24px;
   margin: 10px 0 2px;
-  color:#F2AA98 !important;
+  color: #D05353 !important;
   }
   
   .navbar-brand {
@@ -29,11 +29,11 @@ html {
 	  }
   
   .navbar-brand:hover {
-	  color: #92374D !important;
+	  color: #F2B880 !important;
   }
   
   .nav-link {
-  color:#F2AA98 !important;
+  color:#D05353 !important;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 20px;
@@ -41,7 +41,7 @@ html {
   } 
   
   .nav-item a:hover {
-  color: #92374D !important;
+  color: #F2B880!important;
   }
  
  .navbar-toggler {
@@ -49,7 +49,7 @@ html {
     padding: .25rem .75rem;
     font-size: 1.25rem;
     line-height: 1;
-    border: 2px solid #F2AA98 !important;
+    border: 2px solid #D05353 !important;
     border-radius: .25rem;
 } 
 
@@ -103,10 +103,10 @@ html {
   /* colors, headings, buttons, spacing, divider */
   .section-heading {
 	line-height: 1.4;
-	color:#F2AA98;
+	color:#D05353;
 }
   .btn-light-blue {
-	  background-color: #F2AA98;
+	  background-color: #D05353;
 	  border-color: transparent;
 	  color: white;
 	  text-transform: uppercase;
@@ -115,29 +115,29 @@ html {
 	  font-weight: 600;
 	  }
 	  .btn-light-blue:hover {
-	  background-color: #92374D;
-	  border-color: #F2AA98;
+	  background-color: #F2B880;
+	  border-color: #D05353;
 	  color: #fff;
 	  }
 
 	  .btn-testimonial {
 		background-color: #fff;
-		border-color: #F2AA98;
-		color: #F2AA98;
+		border-color: #D05353 ;
+		color: #D05353;
 		letter-spacing: 2px;;
 		padding: 15px 30px;
 		font-weight: 600
 	  }
 
 	  .btn-testimonial:hover {
-		background-color: #92374D;
+		background-color: #F2B880;
 		border-color: transparent;
 		color: #fff;
 		}
 	  
 	  .divider-section {
 	  width: 20%;               
-	  background: #F2AA98;
+	  background: #D05353;
 	  height: 2px;
 	  margin-top: 1rem;
 	  }
@@ -167,8 +167,8 @@ html {
   /* how it works section */
   
   #works-section {
-  background-color: #F2AA98;
-  color:#fff;
+   background-color: #D05353;
+   color:#fff;
   }
   
   .works-heading{
@@ -200,7 +200,7 @@ html {
   margin: 0;
   }  
 .list-group-item{
-	background-color: #F2AA98;
+	background-color: #D05353;
 }
 
 /* .card-lines {
@@ -219,7 +219,7 @@ html {
 	.team-member img {
 	  width: 14rem;
 	  height: 14rem;
-	  border: 0.5rem solid #F2AA98;
+	  border: 0.5rem solid #D05353;
 	}
 	.team-member h4 {
 	  margin-top: 1.5rem;
@@ -234,7 +234,7 @@ html {
   
   /* Testinomials carousel */
   #testimonial-section{
-	  background-color: #F2AA98;
+	  background-color: #D05353;
 	  color:#fff;
   }
   
@@ -313,12 +313,12 @@ html {
   
   footer {
   padding-top: 30px;
-  background-color: #F2AA98;
+  background-color: #D05353;
   color: #fff;
   }
   
   footer a {
-  color: #92374d;
+  color: #F2B880;
   text-decoration:none;
   }
   
@@ -339,7 +339,7 @@ html {
   .btn-footer {
 	  background-color: #fff;
 	  border-color: transparent;
-	  color: #F2AA98;
+	  color: #D05353;
 	  text-transform: uppercase;
 	  letter-spacing: 2px;
 	  padding: 15px 30px;
@@ -347,7 +347,7 @@ html {
   }
   
   .btn-footer:hover {
-	  background-color: #92374D;
+	  background-color: #F2B880;
 	  border-color: transparent;
 	  color: #fff;	
   }
@@ -369,13 +369,13 @@ html {
 	  color: #fff;
 	}
 	.social-networks i:hover{
-	  color: #92374D;
+	  color: #F2B880;
 	}
   
    /* login form */
   
   .btn-log-in {
-  background-color: #F2AA98;
+  background-color: #D05353;
   border-color: transparent;
   color: white;
   text-transform: uppercase;
@@ -385,14 +385,14 @@ html {
 	  }
   
   .btn-log-in:hover {
-	  background-color: #92374D;
+	  background-color: #F2B880;
 	  border-color: transparent;
 	  color: #fff;
 	  }
   
   .divider-section-log-in {
 	  width:100%;
-	  background: #F2AA98;
+	  background: #D05353;
 	  height: 2px;
 	  margin-top: 1rem;
   }
@@ -432,7 +432,7 @@ html {
 
   /* alert */
   .alert {
-  background-color: #F2AA98;
+  background-color: #D05353;
   }
   
   .alert-heading {
@@ -455,7 +455,7 @@ html {
   /* Modal */
 
   .btn-modal {
-	background-color: #F2AA98;
+	background-color: #D05353;
 	border-color: transparent;
 	color: white;
 	text-transform: uppercase;
